# backtide

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_improvement.yml  feature_request.yml
.github/workflows/: config.yml  publish.yml  test.yml
.streamlit/: config.toml
backtide/: __init__.py  app.py  assets.py  backtest.py  cli.py  config.py  config.pyi  constants.py  core.pyi  data.py  ingestion.py  models.py  storage.py  tickers.py
backtide/assets/: __init__.py  assets.py  crypto.py  currency.py  etf.py  forex.py
backtide/core/: __init__.pyi  backtest.pyi  config.pyi  data.pyi  storage.pyi  utils.pyi
backtide/models/: __init__.py  ui.py
backtide/plots/: __init__.py  candlestick.py  price.py  utils.py
backtide/ui/: __init__.py  analysis.py  app.py  download.py  experiment.py  indicators.py  new_backtest.py  results.py  run_test.py  storage.py  utils.py
backtide/utils/: __init__.py  client.py  constants.py  types.py  utils.py
backtide_core/: Cargo.toml  rustfmt.toml
backtide_core/benches/: data_bench.rs  storage_bench.rs
backtide_core/src/: config.rs  constants.rs  engine.rs  error.rs  errors.rs  lib.rs  models.rs  provider.rs
backtide_core/src/backtest/: indicators.rs  mod.rs
backtide_core/src/backtest/models/: commission_type.rs  conversion_period.rs  currency_conversion_mode.rs  empty_bar_policy.rs  experiment_config.rs  indicator_type.rs  mod.rs  order_type.rs  strategy_type.rs
backtide_core/src/config/: config.rs  errors.rs  interface.rs  mod.rs  utils.rs
backtide_core/src/config/models/: dataframe_backend.rs  log_level.rs  mod.rs  triangulation_strategy.rs
backtide_core/src/data/: download.rs  engine.rs  errors.rs  interface.rs  mod.rs  trait.rs  utils.rs
backtide_core/src/data/models/: asset.rs  asset_meta.rs  asset_type.rs  bar.rs  bar_download.rs  country.rs  currency.rs  dividend.rs  download.rs  download_info.rs  download_result.rs  exchange.rs  forex.rs  forex_pair.rs  instrument.rs  instrument_profile.rs  instrument_type.rs  interval.rs  mod.rs  provider.rs
backtide_core/src/data/provider/: mod.rs  traits.rs  yahoo.rs
backtide_core/src/data/providers/: binance.rs  coinbase.rs  kraken.rs  mod.rs  provider.rs  traits.rs  yahoo.rs
backtide_core/src/ingestion/: asset.rs  errors.rs  ingester.rs  interface.rs  mod.rs  utils.rs
backtide_core/src/ingestion/provider/: mod.rs  traits.rs  yahoo.rs
backtide_core/src/models/: asset.rs  bar.rs  currency.rs  exchange.rs  forex.rs  mod.rs
backtide_core/src/storage/: duckdb.rs  engine.rs  errors.rs  interface.rs  mod.rs  traits.rs
backtide_core/src/storage/models/: bar_series.rs  bar_summary.rs  bars_group.rs  mod.rs  storage_summary.rs  stored_bar.rs  stored_dividend.rs
backtide_core/src/utils/: http.rs  interface.rs  mod.rs  progress.rs  tracing.rs  utils.rs
backtide_core/src/yahoo/: auth.rs  http.rs  mod.rs
docs_sources/: about.md  contributing.md  dependencies.md  faq.md  getting_started.md  index.md  license.md
docs_sources/api/analysis/: compute_statistics.md  plot_candlestick.md  plot_cash_holdings.md  plot_correlation.md  plot_dividends.md  plot_drawdown.md  plot_mae_mfe.md  plot_pnl.md  plot_pnl_histogram.md  plot_position_size.md  plot_price.md  plot_returns.md  plot_rolling_returns.md  plot_rolling_sharpe.md  plot_seasonality.md  plot_trade_duration.md  plot_trade_pnl.md  plot_volatility.md  plot_volume.md  plot_vwap.md
docs_sources/api/backtest/: run_experiment.md
docs_sources/api/config/: config.md  displayconfig.md  get_config.md  ingestionconfig.md  load_config.md  providerconfig.md  set_config.md
docs_sources/api/data/: download_assets.md  download_bars.md  download_instruments.md  fetch_instruments.md  get_asset.md  get_assets.md  get_download_info.md  get_instruments.md  list_assets.md  list_instruments.md  list_intervals.md  resolve_profiles.md  validate_symbols.md
docs_sources/api/ingestion/: get_assets.md  list_assets.md  list_intervals.md
docs_sources/api/models/: asset.md  assetmeta.md  assettype.md  bar.md  codesnippet.md  commissiontype.md  conversionperiod.md  currencyconversionmode.md  datasectionconfig.md  downloadinfo.md  emptybarpolicy.md  engineconfig.md  exchangeconfig.md  experimentgeneralconfig.md  indicatorconfig.md  indicatortype.md  instrument.md  instrumentprofile.md  instrumenttype.md  interval.md  ordertype.md  portfolioconfig.md  provider.md  storagesummary.md  strategyconfig.md  strategytype.md
docs_sources/api/plots/: plot_candlestick.md  plot_correlation.md  plot_dividends.md  plot_drawdown.md  plot_price.md  plot_returns.md  plot_seasonality.md  plot_volume.md  plot_vwap.md
docs_sources/api/storage/: delete_rows.md  delete_symbols.md  get_bars.md  get_bars_summary.md  get_dividends.md  get_summary.md  query_bars.md  query_bars_summary.md  (+5 more)
docs_sources/cli/: download.md  launch.md  run_experiment.md
docs_sources/overrides/: home.html  main.html
docs_sources/scripts/: __init__.py  autodocs.py  autorun.py
docs_sources/stylesheets/: extra.css
docs_sources/user_guide/: analysis.md  application.md  configuration.md  currencies.md  data.md  experiment.md  indicators.md  introduction.md  nomenclature.md  plots.md  sizers.md  storage.md  strategies.md
rust/: Cargo.toml  rustfmt.toml
rust/src/: main.rs
scripts/: generate_stubs.py  run_cargo.py
src/backtide/: backtest.py  cli.py  config.py  storage.py
src/backtide_core/: Cargo.toml
tests/: __init__.py  conftest.py  test_analysis.py  test_backtest.py  test_cli.py  test_config.py  test_data.py  test_sizing.py  test_storage.py  test_ui.py  test_utils.py
tests/data/: database.duckdb.wal
v0.1/: 404.html  index.html  sitemap.xml
v0.1/about/: index.html
v0.1/contributing/: index.html
v0.1/dependencies/: index.html
v0.1/faq/: index.html
v0.1/getting_started/: index.html
v0.1/license/: index.html
v0.1/scripts/: autodocs.py  autorun.py
v0.1/search/: search_index.json
v0.1/stylesheets/: extra.css
(+353 files in other folders)
