[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "backtide"
version = "0.1.0"
description = "A refreshingly simple trading backtester for beginner retail investors"
authors = [{name = "Mavs", email = "m.524687@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11,<3.15"
keywords = ["Trading", "Backtesting", "Financail markets", "Stocks", "ETF", "Forex", "Cryptocurrencies"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Trading :: Finanical markets",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.3.1,<9",
    "streamlit>=1.55.0,<2",
    "streamlit_code_editor>=0.1.22,<2",
    "pandas>=2.3.3,<3",
    "pyyaml>=6.0.3,<7",
]

[dependency-groups]
lint = [
    "ruff>=0.15.7,<1",
    "ty>=0.0.25,<1",
]
pre-commit = [
    "pre-commit>=4.5.1,<5",
]
doc = [
    "kaleido==1.2.0",  # For plotly static image export
    "mike==2.1.4",  # For versioning
    "mkdocs==1.6.1",
    "mkdocs-autorefs==1.4.4",
    "mkdocs-material==9.7.6",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-simple-hooks==0.1.5",
    "pymdown-extensions==10.21",
    "pyyaml==6.0.3",
    "regex==2026.2.28",
]

[project.urls]
"Documentation" = "https://tvdboom.github.io/backtide/"
"Issues" = "https://github.com/tvdboom/backtide/issues"
"Repository" = "https://github.com/tvdboom/backtide"

[project.scripts]
backtide = "backtide.cli:main"

[tool.maturin]
python-source = "."
module-name = "backtide.core"
manifest-path = "backtide_core/Cargo.toml"

[tool.setuptools.packages.find]
include = ["backtide"]

[tool.isort]
skip_gitignore = true
multi_line_output = 5
atomic = true
lines_after_imports = 2
include_trailing_comma = true
ignore_comments = true
remove_redundant_aliases = true

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 99
indent-width = 4
show-fixes = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "D",  # Missing docstring in public function
    "UP",  # pyupgrade
    "YTT",  # flake8-2020
    "BLE",  # blind-except
    "FBT",  # boolean-trap
    "B",  # bugbear
    "A",  # builtins
    "COM",  # commas
    "C4",  # flake8-comprehensions
    "T10",  # debugger
    "ISC",  # implici-str-concat
    "ICN",  # import-conventions
    "G",  # flake8-logging-format
    "INP",  # no-pep420
    "PIE",  # flake8-pie
    "T20",  # print
    "PYI",  # pyi
    "PT",  # flake8-pytest-style
    "Q",  # quotes
    "RSE",  # raise
    "TID",  # tidy-imports
    "ARG",  # flake8-unused-arguments
    "ERA",  # commented-code
    "PD",  # pandas-vet
    "PGH",  # pygrep
    "FLY",  # flynt
    "NPY",  # numpy-specific-rules
    "PERF",  # performance checks
    "RUF",  # ruff
]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports
"app.py" = ["E501"]  # Line too long

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
