[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "backtide"
version = "0.1.0"
description = "A refreshingly simple trading backtester for beginner retail investors"
authors = [{name = "Mavs", email = "m.524687@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11,<3.15"
keywords = ["Trading", "Backtesting", "Financail markets", "Stocks", "ETF", "Forex", "Cryptocurrencies"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Trading :: Finanical markets",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.3.1",
    "plotly>=6.1.0",
    "streamlit>=1.56.0",
    "streamlit_code_editor>=0.1.22",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "tzlocal>=5.0",
]

[project.optional-dependencies]
polars = ["polars>=1.0"]

[dependency-groups]
# Utilities for the developer or for the IDE's language server
dev = [
    "ruff>=0.15.7",
    "rust-just>=1.49.0",
    "ty>=0.0.30",
]
tox = [
    "tox>=4.53.0",
    "tox-uv>=1.33.4",
]
pre-commit = [
    "pre-commit>=4.5.1",
    "pre-commit-uv>=4.2.1",
]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
]
docs = [
    "kaleido>=1.2.0",  # For plotly static image export
    "mike>=2.1.4",  # For versioning
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.6",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-simple-hooks>=0.1.5",
    "pymdown-extensions>=10.21",
    "pyyaml>=6.0.3",
    "regex>=2026.2.28",
]

[project.urls]
"Documentation" = "https://tvdboom.github.io/backtide/"
"Issues" = "https://github.com/tvdboom/backtide/issues"
"Repository" = "https://github.com/tvdboom/backtide"

[project.scripts]
backtide = "backtide.cli:main"

[tool.maturin]
python-source = "."
module-name = "backtide.core"
manifest-path = "backtide_core/Cargo.toml"

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 99
indent-width = 4
show-fixes = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "I",  # isort
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "D",  # Missing docstring in public function
    "UP",  # pyupgrade
    "YTT",  # flake8-2020
    "BLE",  # blind-except
    "FBT",  # boolean-trap
    "B",  # bugbear
    "A",  # builtins
    "COM",  # commas
    "C4",  # flake8-comprehensions
    "T10",  # debugger
    "ISC",  # implici-str-concat
    "ICN",  # import-conventions
    "G",  # flake8-logging-format
    "INP",  # no-pep420
    "PIE",  # flake8-pie
    "T20",  # print
    "PYI",  # pyi
    "PT",  # flake8-pytest-style
    "Q",  # quotes
    "RSE",  # raise
    "TID",  # tidy-imports
    "ARG",  # flake8-unused-arguments
    "ERA",  # commented-code
    "PD",  # pandas-vet
    "PGH",  # pygrep
    "FLY",  # flynt
    "NPY",  # numpy-specific-rules
    "PERF",  # performance checks
    "RUF",  # ruff
]
ignore = [
    "COM812",  # Trailing comma — conflicts with the ruff formatter
    "E731",  # Do not use a lambda expression
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"backtide/core/*.pyi" = [
    "PYI021",  # Docstrings in stubs
]
"__init__.py" = ["F401"]  # Unused imports
"app.py" = ["E501"]  # Line too long
"backtest.py" = ["F401"]  # Unused imports
"config.py" = ["F401"]  # Unused imports
"data.py" = ["F401"]  # Unused imports
"storage.py" = ["F401"]  # Unused imports
"generate_stubs.py" = [
    "INP001",  # Part of an implicit namespace package
    "T201",  # Use print statement
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
omit = [
    "backtide/ui/app.py",  # Streamlit entry point (navigation wiring only)
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
