[package]
name = "backtide_core"
version = "0.1.0"
edition = "2021"
description = "A refreshingly simple trading backtester for beginner retail investors"

[lib]
name = "backtide_core"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
futures = "0.3.32"
moka = { version = "0.12.15", features = ["future"] }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
pythonize = "0.28.0"
reqwest = { version = "0.13.2", features = ["json", "cookies", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
serde_with = "3.18.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread", "time"] }
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
