[package]
name = "backtide_core"
version = "0.1.0"
edition = "2021"
description = "A refreshingly simple trading backtester for beginner retail investors"

[lib]
name = "backtide_core"
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
duckdb = { version = "1.10502.0", features = ["bundled"] }
futures = "0.3.32"
indexmap = "2.14.0"
indicatif = "0.18.4"
itertools = "0.14"
moka = { version = "0.12.15", features = ["future"] }
pyo3 = { version = "0.28.3", features = ["extension-module", "experimental-inspect", "multiple-pymethods"] }
pythonize = "0.28.0"
reqwest = { version = "0.13.2", features = ["json", "cookies", "query", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
serde_with = "3.18.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.5.1", features = ["fs", "macros", "rt-multi-thread", "time"] }
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
rstest = "0.26.1"
tempfile = "3.27.0"
wiremock = "0.6"

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "data_bench"
harness = false
